name:               SuperMax
version:            0.0
homepage:           https://github.com/scvalex/Super-Max
synopsis:           Max, superheroes, etc.
category:           Web
license:            GPL-3
author:             Francesco Mazzoli, Alexandru Scvortov
maintainer:         Francesco Mazzoli <f@mazzo.li>
cabal-version:      >= 1.6
build-type:         Simple

source-repository head
  type:      git
  location:  git://github.com/scvalex/Super-Max
  branch:    master

executable SuperMax
  hs-source-dirs:    src
  main-is:           Main.hs

  build-depends:     base >= 4 && < 5
                   , gloss >= 1 && < 2

  GHC-options:       -Wall -fno-warn-unused-do-bind -threaded
