Name:           spellslinger
Version:        0.5
Cabal-Version:  >= 1.8
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Alexandru Scvortov <scvalex@gmail.com>
Maintainer:     scvalex@gmail.com
Homepage:       https://github.com/scvalex/super-max
Category:       Games
Synopsis:       A game featuring wizards, spells, and monsters
Build-Type:     Simple
Description:
        See the @README.md@ file and the homepage for details.

Extra-Source-Files:     Makefile

Data-Files:             README.md, LICENSE

Source-repository head
  Type:                 git
  Location:             https://github.com/scvalex/super-max.git

Library
  Build-depends:        base >= 4 && < 5, containers, filepath,
                        SDL, SDL-ttf, random,
                        stm, time, vect
  Ghc-options:          -Wall
  Hs-Source-Dirs:       engine/
  Extensions:           ScopedTypeVariables, OverloadedStrings
  Exposed-modules:      Game.Engine,
                        Game.Entity,
                        Game.Event

Executable spellslinger
  Build-depends:        base >= 4 && < 5, aeson, bytestring, containers,
                        directory, filepath, HTTP, network,
                        spellslinger, unix
  Ghc-options:          -Wall -threaded
  Hs-Source-Dirs:       src/
  Extensions:           ScopedTypeVariables, OverloadedStrings
  Main-is:              Main.hs
